tests/invalid_inputs/sema/global_var_redeclaration.cpp

int foo() {

}

// error
int foo;
